k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress
  annotations:
    #kubernetes.io/ingress.global-static-ip-name: ADDRESS_NAME
    networking.gke.io/managed-certificates: test-cert
    kubernetes.io/ingress.class: gce
    networking.gke.io/v1beta1.FrontendConfig: test-config
    networking.gke.io/v1beta1.BackendConfig: argocd-backend-config
spec:
#  defaultBackend:
#    service:
#      name: nginx
#      port:
#        name: http
#  tls:
#    - secretName: argocd-secret
#      hosts:
#        - argocd.antoine-campbell.com
  rules:
    - host: argocd.antoine-campbell.com
      http:
        paths:
          - backend:
              service:
                name: argo-cd-argocd-server
                port:
                  name: https
            pathType: ImplementationSpecific
    - host: test.antoine-campbell.com
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  name: http
            pathType: ImplementationSpecific
